2010-08-19  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Check alignment of pthread types
	* configure: Regenerate
	* Headers/Additions/GNUstepBase/GSConfig.h.in: Record alignment

2010-08-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNumber.m: Modifications to permit generation of NIBs that
	OSX can read again ... functionality was lost in recent rewrite.

2010-08-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m:
	* Source/NSDistantObject.m:
	Return nil from (methodSignatureForSelector:) if the selector is null.
	* Source/NSObjcRuntime.m:
	Register new selector as needed.

2010-08-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSNotificationQueue.m: remove_from_queue_no_release()
	Add assertions instead of existing hack when removing an item
	from a corrupted list.
	
2010-08-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNotificationQueue.m: notify() .. buffer notifications
	and remove from list before posting them.
	Prevents re-entrancy problems where another call to notify() could
	post (and remove from the list) notifications.

2010-08-13  Eric Wasylishen <ewasylishen@gmail.com>

	* Headers/Foundation/NSLocale.h:
	* Headers/Foundation/NSUserDefaults.h:
	Fix typo (GSAPI_LAST -> GS_API_LATEST)

2010-08-12  Nicola Pero <nicola.pero@meta-innovation.com>

	* Resources/Languages/Locale.aliases: Added many languages which
	were missing from the list.  Data taken from
	gettext-0.18.1.1/gettext-tools/doc/ISO_639 and
	gettext-0.18.1.1/gettext-tools/doc/ISO_639-2.

2010-08-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTask.m: thread-safety fix.

2010-08-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m:
	* Source/NSURLProtocol.m:
	* Source/GSAttributedString.m:
	* Source/ObjectiveC2/properties.m:
	* Source/NSProtocolChecker.m:
	* Source/NSDistantObject.m:
	* Tools/gdomap.c:
	Functionless changes to avoid compiler warnings reported by Fred.

2010-08-07  Richard Frith-Macdonald <rfm@gnu.org>
